--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
   font-family: monospace;
 }
 body{
-  background-color: #842828;
+  background-image: url("../Images/pokemon-bg.png");
+  background-size: cover;
 }
 .flip-card {
     height:300px;
@@ -41,13 +42,13 @@ body{
   
   /* Style the front side (fallback if image is missing) */
   .flip-card-front {
-    background-color: #111111;
+    background-color: #11111150;
     color: black;
   }
   
   /* Style the back side */
   .flip-card-back {
-    background-color: #111111;
+    background-color: #11111150;
     color: white;
     transform: rotateY(180deg);
   }
