--- a/src/Header.css
+++ b/src/Header.css
@@ -32,3 +32,19 @@ header img{
 .h{
     padding: 10px;
 }
+@media screen and (max-width: 600px) {
+    header{
+        flex-direction: column;
+    }
+    header img{
+        width: 100%;
+        height: 100px;
+    }
+    .hh{
+        flex: 1;
+    }
+    .h{
+        padding: 0;
+    }
+}
+    
